Fixed header
was covering the top content

--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 48px;
-    position: fixed;
-    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
 
 h1 {
